@@ -1,3 +1,4 @@
+02. Feb. 2012 - amo -  changes in AFX2Component due to API changes in IComponent
 02. Feb. 2012 - amo -  moved StateLessComponentRunWorker from inner class to class, cleanup
 14. Dez. 2011 - amo -  implement getActionListener() to AFX2Workbench to allow workbench to send messages
 08. Dez. 2011 - amo -  changed dependencies between statelesscallback component and scheduler to remove circular dependency
